N7-106 fix footer spacing if we hide that menu

--- a/style.css
+++ b/style.css
@@ -356,6 +356,7 @@ header {
 {
 	float: right;
 	max-width: 355px;	
+  margin-bottom: 2em;
 }
 
 .cards img
